[package]
name = "rust-acl"
version = "0.1.0"
edition = "2021"
description = "Live-reload ACL (blocklist + allowlist) for OpenSIPS"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
opensips-rs = { path = "../rust/sdk" }
rust-common = { path = "../rust/common" }

[build-dependencies]
opensips-build = { path = "../rust/build-utils" }
cc = "1"
